--- a/Housing_Prices_Regression.ipynb
+++ b/Housing_Prices_Regression.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Housing_Prices_Regression.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO9h7BSjCs29lPCIfNQW3Eh",
+      "authorship_tag": "ABX9TyO9b4FoobYg8vYs+E56O2QP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2140,7 +2140,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 674
+          "height": 1000
         },
         "id": "J2eaFsiju2d5",
         "outputId": "283c894d-0811-4e78-bae8-44a33b59d05d"
@@ -2255,7 +2255,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 893
+          "height": 873
         },
         "id": "oXYi6zGYuZqz",
         "outputId": "c0a7e1b9-2087-4da7-f9dc-64c879fbdff8"
@@ -2411,7 +2411,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 490
+          "height": 426
         },
         "id": "kMI9I_s2vf53",
         "outputId": "b7e57a76-6e13-402e-857e-b5dc0315317b"
@@ -2695,7 +2695,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 594
+          "height": 577
         },
         "id": "ytlPOcYJvfol",
         "outputId": "88750e3d-6965-42c4-f9bb-55eb9c3e910a"
@@ -2750,7 +2750,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 490
+          "height": 426
         },
         "id": "GDKY-nAyvfhZ",
         "outputId": "fed1432b-e9d7-4da3-efdb-ab48431aaeb0"
@@ -3130,15 +3130,146 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "## Feature Scaling"
       ],
       "metadata": {
-        "id": "ZmEl6GV5u8yL"
+        "id": "H7GgXyWEze26"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Min Max Scaling\n",
+        "import sklearn\n",
+        "from sklearn.preprocessing import MinMaxScaler"
+      ],
+      "metadata": {
+        "id": "GsxtH_VxzhWQ"
       },
-      "execution_count": null,
+      "execution_count": 51,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scaler = MinMaxScaler()\n",
+        "sale_scaled = scaler.fit_transform(df_lessthen350k[['SalePrice']])\n",
+        "sale_scaled"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R48pqHA3zjvy",
+        "outputId": "358215b9-0a2f-4813-cc06-271ed39239c1"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.55093621],\n",
+              "       [0.46524913],\n",
+              "       [0.59854015],\n",
+              "       ...,\n",
+              "       [0.73500476],\n",
+              "       [0.3402888 ],\n",
+              "       [0.35734687]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Standardization\n",
+        "from sklearn.preprocessing import StandardScaler"
+      ],
+      "metadata": {
+        "id": "ge3iaBG5z1IR"
+      },
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scaler_2 = StandardScaler()\n",
+        "standard_sale_scaled = scaler_2.fit_transform(df_lessthen350k[['SalePrice']])\n",
+        "standard_sale_scaled"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8AWpA4AQz15I",
+        "outputId": "8c0c028b-869f-4a61-cece-f7127338b6bf"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0.6195948 ],\n",
+              "       [ 0.17215093],\n",
+              "       [ 0.86817473],\n",
+              "       ...,\n",
+              "       [ 1.58077054],\n",
+              "       [-0.48037139],\n",
+              "       [-0.39129692]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Modeling"
+      ],
+      "metadata": {
+        "id": "TO1hb8DizZFw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.linear_model import LinearRegression\n",
+        "\n",
+        "lin_reg = LinearRegression()\n",
+        "lin_reg.fit(df_lessthen350k,)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 201
+        },
+        "id": "ZmEl6GV5u8yL",
+        "outputId": "32bd74c1-7886-4770-ac99-1bc5cb8d57a1"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-55-f0f34ceff421>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mlin_reg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLinearRegression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mlin_reg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_lessthen350k\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: fit() missing 1 required positional argument: 'y'"
+          ]
+        }
+      ]
     }
   ]
 }
