Added note in conclusion

--- a/Housing_Prices_Regression.ipynb
+++ b/Housing_Prices_Regression.ipynb
@@ -6,7 +6,7 @@
       "name": "Housing_Prices_Regression.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNseyqwVQmrNzS4YiRVC223",
+      "authorship_tag": "ABX9TyPFHsieJOXzvilUAJfbzfXB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4329,11 +4329,11 @@
         "df_test_cat['KitchenQual'].unique()"
       ],
       "metadata": {
-        "id": "M4GWpunEEYxS",
-        "outputId": "ef26f7d6-1bb8-430b-9ab0-ea6c44543b9e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "M4GWpunEEYxS",
+        "outputId": "ef26f7d6-1bb8-430b-9ab0-ea6c44543b9e"
       },
       "execution_count": 393,
       "outputs": [
@@ -4355,11 +4355,11 @@
         "df_test_cat['KitchenQual'] = df_test_cat['KitchenQual'].replace([0],'TA')\n"
       ],
       "metadata": {
-        "id": "iQVf07-yElYX",
-        "outputId": "fba89ab9-608f-4203-fd50-245e7fe2e15c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iQVf07-yElYX",
+        "outputId": "fba89ab9-608f-4203-fd50-245e7fe2e15c"
       },
       "execution_count": 394,
       "outputs": [
@@ -4383,11 +4383,11 @@
         "df_test_cat['KitchenQual'].unique()"
       ],
       "metadata": {
-        "id": "-Wgt427LEu2U",
-        "outputId": "09e4eb16-57d5-4830-8b1e-8a3d53342720",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-Wgt427LEu2U",
+        "outputId": "09e4eb16-57d5-4830-8b1e-8a3d53342720"
       },
       "execution_count": 395,
       "outputs": [
@@ -6648,6 +6648,26 @@
       "metadata": {
         "id": "u6y4SsM-gkuX"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Professor Gift, I have updated my model so now the values are different than what I submitted for the assignment 2 deadline. "
+      ],
+      "metadata": {
+        "id": "RQQ5z7zvFuVm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "7eeJsCOFGMvK"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
